--- a/package.json
+++ b/package.json
@@ -2,45 +2,45 @@
   "name": "ajs",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --mode development",
     "build": "webpack --mode production",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "test": "jest",
+    "test": "jest --coverage",
     "coverage": "jest --coverage",
     "preshow:coverage": "npm run coverage",
     "show:coverage": "live-server coverage/lcov-report",
     "preshow:dist": "npm run build",
     "show:dist": "live-server dist"
   },
-  "author": "Rysaev Damir <freepad@ya.ru>",
-  "license": "MIT",
+  "author": "Bondarev",
+  "license": "",
   "devDependencies": {
     "@babel/cli": "^7.23.0",
     "@babel/core": "^7.23.0",
     "@babel/preset-env": "^7.22.20",
     "@babel/preset-typescript": "^7.23.3",
     "@jest/globals": "^29.7.0",
-    "@types/jest": "^29.5.14",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "@typescript-eslint/parser": "^6.13.2",
+    "@stylistic/eslint-plugin-js": "^4.2.0",
+    "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
+    "core-js": "^3.41.0",
     "css-loader": "^6.8.1",
-    "eslint": "^8.55.0",
-    "eslint-plugin-jest": "^27.4.2",
+    "eslint": "^9.27.0",
+    "globals": "^16.1.0",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
     "jest": "^29.7.0",
     "style-loader": "^3.3.3",
-    "typescript": "^5.8.3",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
-    "babel-plugin-transform-typescript": "^7.0.0-alpha.19",
-    "ts-jest": "^29.3.4"
+    "@babel/parser": "^7.27.2",
+    "@eslint/js": "^9.27.0"
   }
 }
